# ShinningTrapezohedron

./: Cargo.toml  README.md  build.rs  config.example.toml
.cargo/: config.toml
frontend/: components.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: app.css
frontend/src/lib/: navigation.ts  status-history.spec.ts  status-history.ts
frontend/src/lib/api/: config.spec.ts  config.ts  status.spec.ts  status.ts
frontend/src/lib/components/: app-shell.svelte  app-sidebar.svelte  config-editor.svelte  overview-page.svelte  overview-page.svelte.spec.ts  status-charts.svelte  status-settings-page.svelte.spec.ts  theme-menu.svelte  theme-menu.svelte.spec.ts
frontend/src/lib/components/ui/alert/: alert-title.svelte  alert.svelte
frontend/src/lib/components/ui/button/: button.svelte
frontend/src/lib/components/ui/card/: card.svelte
frontend/src/lib/components/ui/chart/: chart-tooltip.svelte
frontend/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-label.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-content.svelte  dropdown-menu-sub-trigger.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/settings/logging/: +page.svelte
frontend/src/routes/settings/status/: +page.svelte
frontend/src/routes/settings/web/: +page.svelte
src/: config.rs  main.rs  shutdown.rs  status.rs  web.rs
src/config/: manager.rs  model.rs
src/status/: linux.rs  model.rs
src/web/: api.rs  status_stream.rs
(+22 files in other folders)
