[package]
name = "shinning_trapezohedron"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[dependencies]
anyhow = "1.0.104"
async-trait = "0.1.91"
axum = { version = "0.8.9", default-features = false, features = [
    "http1",
    "json",
    "matched-path",
    "tokio",
    "tracing",
] }
embedded-graphics = "0.8.2"
embedded-hal = "1.0.0"
rust-embed = { version = "8.12.0", features = [
    "deterministic-timestamps",
    "interpolate-folder-path",
    "mime-guess",
] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = [
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
] }
tokio-stream = { version = "0.1.19", default-features = false, features = [
    "sync",
] }
tower-http = { version = "0.7.0", features = ["trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
linux-embedded-hal = { version = "0.4.1", default-features = false, features = [
    "i2c",
] }
procfs = { version = "0.18.0", default-features = false }
rtnetlink = "0.21.0"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
